--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@ input{
   font-size: 1.3rem;
   border-radius: 0.4rem;
   border: 0px;
+  margin: 0.7rem;
 }
 
 .addTodoBtn{
@@ -18,11 +19,18 @@ input{
   color: #fff;
   border-radius: 0.3rem;
   border: 0px;
-  box-shadow: 5px 5px 10px 10px rgba(97, 96, 96, 0.582);
+  box-shadow: 3px 3px 5px 5px rgba(184, 183, 183, 0.582);
+  margin: 1rem;
+  font-size: 1.3rem;
+  padding: 0.7rem;
 }
 
 .addTodoBtn:active{
   transform: scale(0.98);
+}
+
+.rbc-day-bg{
+  border-radius: 0.3rem;
 }
 
 
